# yaaf

./: README.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: release.yml  tests.yml
consumers/: __init__.py
consumers/api/: __init__.py
consumers/api/[name]/: _server.py  _service.py
consumers/api/foo_bar_baz/: _server.py  _service.py
consumers/api/hello/: _server.py  _service.py
consumers/api/users/: _server.py  _service.py
scripts/: bump_version.py
tests/: test_app_integration.py  test_cli_consumers_dir.py  test_di.py  test_loader.py  test_optional_service.py  test_responses.py
yaaf/: __init__.py  app.py  cli.py  di.py  gen_services.py  loader.py  responses.py  types.py
