[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yaaf"
version = "2026.02.04"
description = "Minimal ASGI app scaffold"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["uvicorn>=0.23"]
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Framework :: AsyncIO",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
test = ["pytest>=7.4", "pytest-asyncio>=0.23"]

[project.scripts]
yaaf = "yaaf.cli:main"

[tool.setuptools]
packages = ["yaaf"]

[tool.setuptools.package-data]
yaaf = ["py.typed"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
check_untyped_defs = true
